--- a/conf/app.conf.example
+++ b/conf/app.conf.example
@@ -9,7 +9,7 @@ sessionname = mindoc_id
 copyrequestbody = true
 
 #系统完整URL(http://doc.iminho.me),如果该项不设置，会从请求头中获取地址。
-baseurl="${MINDOC_BASE_URL}"
+#baseurl="${MINDOC_BASE_URL}"
 
 
 #########代码高亮样式################
